Changes to many  things
Gamelist generation has been updated

Fix a typo in speedtest that kept one test from running, at all

No longer delete temporary gamelists, so, as long as you don't reboot, it really will play every game before repeating, if you have that option enabled.

Turned more code into reusable functions, some of which will be used later to allow regenerating the gamelists, when needed.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -112,12 +112,15 @@ listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-# SAM creates game lists for each core and can store these lists in RAM (dynamic) or on SD card (static).
-# gamelists="Dynamic" means on every reboot, new gamelists are created. This might be slow but offers flexibility if you update your rom folders a lot.
-# gamelists="Static" will be a lot faster since game lists are stored permanently on SD card and SAM doesn't need to browse every game folder on reboot.
+# SAM creates game lists for each core this can be done all at once on your first startup
+# create_all_gamelists="No" means gamelists will be created the first time a core is selected, as usual
+# create_all_gamelists="Yes" means all the gamelists will be created the first time the script is run
+# Future plans include adding options in the graphical menu to allow the user to create all of the gamelists
+# in case roms are added removed, renamed, etc. Including one specifically for the Arcade cores, so you can
+# update that list when new Arcade cores are added, without needing to regenerate the entire set
+# these will also be available from the commandline, by running "MiSTer_SAM_on.sh ArcadeList" or, something similar.
 
-gamelists="Static"
-
+create_all_gamelists="No"
 
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
