More refactoring and game list creation changes
Update all variables for correct types

This removes the need to cast a variable to lowercase, as they are declared lowercase, with a few exceptions, including input from the commandline, and, when needing to do a lowercase compare of a normally agnostic case variable (such as checking file extensions)

Add variables for duration between regenerating game lists and add settings to ini

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -122,6 +122,24 @@ listenjoy="Yes"
 
 create_all_gamelists="No"
 
+# This option control when game lists will be regenerated automatically on startup
+# Valid values are "Hour Day Week Always Never"
+# Always will regenerate every time you start SAM
+# Never will regenerate in a few hundred years :) So, not really never, but, close enough.
+# Those without a connection to the Internet, and without an RTC addon will likely want to set these to Never
+# and manually update.
+# The rest are self explanatory
+rebuild_freq="Week"
+# This option is multiplied against the option above, so, a 2 would mean every 2 Hours Days or Weeks
+# This is ignored for Always and Never, as you can only have 1 of those
+# Valid values are any number higher than 0
+regen_duration=4
+# These optios are exactly the same as above, but, since new Arcade cores are added all the time,
+# we assume you might want to update these more frequently
+rebuild_freq_arcade="Week"
+regen_duration_arcade=1
+
+
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
