Code Refactoring and add Commodore 64
Commodore 64 has been added, using cart files, for now, but, an upcoming change will add multiple filetypes for cores that support more than one, and, prg will be added, So far, no other tested filetypes work, but, if we find a way to support them, later, more may be added, especially if mgl is updated to allow more settings, such as loading d64 files into the disk drive.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,8 +19,8 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: arcade fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
-corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+# Valid options: arcade c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+corelist="arcade,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global Volume. Unmute when button is pushed.
 mute="No"
@@ -42,6 +42,10 @@ roulettetimer="500"
 arcadeexclude="First Bad Game.mra
 Second Bad Game.mra
 Third Bad Game.mra"
+
+c64exclude="First Bad Game.crt
+Second Bad Game.crt
+Third Bad Game.crt"
 
 fdsexclude="First Bad Game.fds
 Second Bad Game.fds
@@ -99,7 +103,7 @@ Third Bad Game.chd"
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( vgm readme hes-v3 unsupported sounds )
+exclude=( vgm readme hes-v3 unsupported sounds music palettes )
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
 # When you push a button or move the mouse, interrupt SAM
@@ -149,6 +153,7 @@ usedefaultpaths="No"
 
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
+c64path="/media/fat/Games/C64"
 fdspath="/media/fat/games/NES"
 gbpath="/media/fat/games/Gameboy"
 gbcpath="/media/fat/games/Gameboy"
@@ -170,6 +175,7 @@ psxpath="/media/fat/games/PSX"
 # Uncomment below to use only rotated games
 # arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepathextra=""
+c64pathextra=""
 fdspathextra=""
 gbpathextra=""
 gbcpathextra=""
@@ -188,6 +194,7 @@ psxpathextra=""
 
 #-------- CORE PATHS RBF --------
 arcadepathrbf="_Arcade"
+c64pathrbf="_Computer"
 fdspathrbf="_Console"
 gbpathrbf="_Console"
 gbcpathrbf="_Console"
