Add Atari 2600 5200 7800 and Lynx
Atari2600 was, long ago, merged with the ATARI7800 core, and, the rom files need to be in the ATARI7800 folder for mgl to work, until something is changed in the cores/mgl code, you can use the pathsextra fields to separate them into separate directories, under ATARI7800 if you wish, which will keep the gamelist creator from scanning both sets of files for each core.

usedefaultpaths only takes a couple of seconds, so, is not "slow" and will be enabled by default. You can keep it set to No or, set it to No if you'd like, and, it will continue to work, somewhat, but, will become unsupported.

Everdrive mappings have been made obsolete, and have been removed, this affects nobody, as we don't use them for anything.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,8 +19,8 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: arcade c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
-corelist="arcade,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+# Valid options: arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+corelist="arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global Volume. Unmute when button is pushed.
 mute="No"
@@ -42,6 +42,22 @@ roulettetimer="500"
 arcadeexclude="First Bad Game.mra
 Second Bad Game.mra
 Third Bad Game.mra"
+
+atari2600exclude="First Bad Game.a26
+Second Bad Game.a26
+Third Bad Game.a26"
+
+atari5200exclude="First Bad Game.a52
+Second Bad Game.a52
+Third Bad Game.a52"
+
+atari7800exclude="First Bad Game.a78
+Second Bad Game.a78
+Third Bad Game.a78"
+
+atarilynxexclude="First Bad Game.lnx
+Second Bad Game.lnx
+Third Bad Game.lnx"
 
 c64exclude="First Bad Game.crt
 Second Bad Game.crt
@@ -148,11 +164,14 @@ regen_duration_arcade=1
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
 # This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
-# Default is "No" because this option is slower.
-usedefaultpaths="No"
+usedefaultpaths="Yes"
 
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
+atari2600path="/media/fat/Games/Atari7800"
+atari5200path="/media/fat/Games/Atari5200"
+atari7800path="/media/fat/Games/Atari7800"
+atarilynxpath="/media/fat/Games/AtariLynx"
 c64path="/media/fat/Games/C64"
 fdspath="/media/fat/games/NES"
 gbpath="/media/fat/games/Gameboy"
@@ -175,6 +194,10 @@ psxpath="/media/fat/games/PSX"
 # Uncomment below to use only rotated games
 # arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepathextra=""
+atari2600pathextra=""
+atari5200pathextra=""
+atari7800pathextra=""
+atarilynxpathextra=""
 c64pathextra=""
 fdspathextra=""
 gbpathextra=""
@@ -194,6 +217,10 @@ psxpathextra=""
 
 #-------- CORE PATHS RBF --------
 arcadepathrbf="_Arcade"
+atari2600pathrbf="_Console"
+atari5200pathrbf="_Console"
+atari7800pathrbf="_Console"
+atarilynxpathrbf="_Console"
 c64pathrbf="_Computer"
 fdspathrbf="_Console"
 gbpathrbf="_Console"
