Fix stop and playcurrentgame=Yes

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -26,8 +26,8 @@ corelist="arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,gene
 mute="No"
 
 # If "mute=Yes", what should happen when button is pushed?
-# playcurrentgame="Yes" - SAM will relaunch the current game with sound
-# playcurrentgame="No" - SAM will reboot to MiSTer Menu
+# "Yes" - SAM will relaunch the current game with sound
+# "No" - SAM will reboot to MiSTer Menu
 playcurrentgame="No"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
@@ -246,7 +246,7 @@ useneogeotitles="Yes"
 
 # -------- TTY2OLED -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled
-# usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
+# "Yes" shows the text name of the game being played - NOT the standard core name graphic
 # All needed values are read from the tty2oled INI files
 ttyenable="No"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
