--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -28,7 +28,7 @@ mute="No"
 # If "mute=Yes", what should happen when button is pushed?
 # "Yes" - SAM will relaunch the current game with sound
 # "No" - SAM will reboot to MiSTer Menu
-playcurrentgame="No"
+playcurrentgame="Yes"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
