--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -35,6 +35,11 @@ playcurrentgame="Yes"
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
 
+# -------- TTY2OLED SETTINGS -------
+# Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
+# "Yes" shows the text name of the game being played - NOT the standard core name graphic
+ttyenable="No"
+
 #-------- EXCLUDE LISTS --------
 # One game per line
 # Trailing quote is required!
@@ -244,11 +249,9 @@ psxpathrbf="_Console"
 neogeoregion="English"
 useneogeotitles="Yes"
 
-# -------- TTY2OLED -------
-# Options for https://github.com/venice1200/MiSTer_tty2oled
-# "Yes" shows the text name of the game being played - NOT the standard core name graphic
+# -------- TTY2OLED ADVCANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
-ttyenable="No"
+
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="Yes"
