--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -132,37 +132,24 @@ exclude=( vgm readme hes-v3 unsupported sounds music palettes )
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
 # Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, some BT controllers and SNAC devices
-
 listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-# SAM creates game lists for each core this can be done all at once on your first startup
+# SAM creates game lists for each core. This can be done all at once on your first startup
 # create_all_gamelists="No" means gamelists will be created the first time a core is selected, as usual
 # create_all_gamelists="Yes" means all the gamelists will be created the first time the script is run
-# Future plans include adding options in the graphical menu to allow the user to create all of the gamelists
-# in case roms are added removed, renamed, etc. Including one specifically for the Arcade cores, so you can
-# update that list when new Arcade cores are added, without needing to regenerate the entire set
-# these will also be available from the commandline, by running "MiSTer_SAM_on.sh ArcadeList" or, something similar.
-
 create_all_gamelists="No"
 
-# This option control when game lists will be regenerated automatically on startup
+# This option controls when game lists will be regenerated automatically on startup
 # Valid values are "Hour Day Week Always Never"
 # Always will regenerate every time you start SAM
 # Never will regenerate in a few hundred years :) So, not really never, but, close enough.
-# Those without a connection to the Internet, and without an RTC addon will likely want to set these to Never
-# and manually update.
-# The rest are self explanatory
 rebuild_freq="Week"
-# This option is multiplied against the option above, so, a 2 would mean every 2 Hours Days or Weeks
-# This is ignored for Always and Never, as you can only have 1 of those
-# Valid values are any number higher than 0
-regen_duration=4
-# These optios are exactly the same as above, but, since new Arcade cores are added all the time,
-# we assume you might want to update these more frequently
+
+# Arcade cores get updated a lot so we update gamelists more often
 rebuild_freq_arcade="Week"
-regen_duration_arcade=1
+
 
 
 # -------- GAME PATHS --------
