--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -182,9 +182,11 @@ tgfx16cdpath="/media/fat/games/TGFX16-CD"
 psxpath="/media/fat/games/PSX"
 
 #-------- CORE PATHS EXTRA --------
-# Path must begin with /
-# Uncomment below to use only rotated games
+# If you want only subdirectories being used, define them here
+# Example:
 # arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+# Path must begin with /
+
 arcadepathextra=""
 atari2600pathextra=""
 atari5200pathextra=""
