--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -127,6 +127,8 @@ Third Bad Game.chd"
 exclude=( vgm readme hes-v3 unsupported sounds music palettes )
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
+
+# -------- BUTTON DETECTION --------
 # When you push a button or move the mouse, interrupt SAM
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
@@ -135,6 +137,8 @@ exclude=( vgm readme hes-v3 unsupported sounds music palettes )
 listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
+
+# -------- GAME LISTS --------
 
 # SAM creates game lists for each core. This can be done all at once on your first startup
 # create_all_gamelists="No" means gamelists will be created the first time a core is selected, as usual
@@ -149,8 +153,6 @@ rebuild_freq="Week"
 
 # Arcade cores get updated a lot so we update gamelists more often
 rebuild_freq_arcade="Week"
-
-
 
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
