--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -158,7 +158,7 @@ rebuild_freq_arcade="Week"
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
 # This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
-usedefaultpaths="Yes"
+usedefaultpaths="No"
 
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
