--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -156,9 +156,6 @@ rebuild_freq_arcade="Week"
 
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
-# Uses the default rom locations that MiSTer and all cores use by default
-# This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
-usedefaultpaths="No"
 
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
@@ -233,6 +230,11 @@ snespathrbf="_Console"
 tgfx16pathrbf="_Console"
 tgfx16cdpathrbf="_Console"
 psxpathrbf="_Console"
+
+# The following option uses the default rom locations that MiSTer and all cores use by default
+# Setting this to "yes" is only recommended if you have trouble with the default method. 
+# It can cause significant delay on startup.
+usedefaultpaths="No"
 
 # -------- NeoGeo Full Titles -------
 # Options are English and JAPANESE
