--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -140,8 +140,10 @@ listenjoy="Yes"
 
 # -------- GAME LISTS --------
 
-# SAM creates game lists for each core. This can be done all at once on your first startup
-# create_all_gamelists="No" means gamelists will be created the first time a core is selected, as usual
+# SAM creates game lists for each core which contains every rom's location. 
+# This process will take a while on startup
+
+# create_all_gamelists="No" means gamelists will be created the first time a core is selected
 # create_all_gamelists="Yes" means all the gamelists will be created the first time the script is run
 create_all_gamelists="No"
 
