--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -25,10 +25,9 @@ corelist="arcade,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,t
 # When SAM starts, mute global Volume. Unmute when button is pushed.
 mute="No"
 
-# If "mute=Yes", what should happen when button is pushed?
-# "Yes" - SAM will relaunch the current game with sound
-# "No" - SAM will reboot to MiSTer Menu
-playcurrentgame="Yes"
+# How do we exit SAM?
+# playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed
+playcurrentgame="Yes" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
