Many big changes
Mostly changes to handling command line switches and commands

New way to handle muting and unmuting the Global volume, and start implementing muting only the core, allowing scripts like BGM to play music and sounds over the Attract mode.

Some general cleanups

Allow the stop and --stop commands to exit, gracefully, running cleanup, so we don't leave bind mounts behind, etc.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -22,10 +22,12 @@ menuonly="Yes"
 # Valid options: arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
 corelist="arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
-# When SAM starts, mute global Volume. Unmute when button is pushed.
+# Yes - When SAM starts, mute global Volume. Unmute when button is pushed.
+# Core - Mute the core only (allows scripts like BGM to play over the attract mode)
+# No - Don't mute anything
 mute="No"
 
-# If "mute=Yes", what should happen when button is pushed?
+# What should happen when button is pushed?
 # "Yes" - SAM will relaunch the current game with sound
 # "No" - SAM will reboot to MiSTer Menu
 playcurrentgame="No"
