--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -159,6 +159,7 @@ rebuild_freq_arcade="Week"
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 
 # Default - all arcade games
+amigapath="/media/fat/Games/Amiga"
 arcadepath="/media/fat/_Arcade"
 atari2600path="/media/fat/Games/Atari7800"
 atari5200path="/media/fat/Games/Atari5200"
@@ -187,6 +188,7 @@ psxpath="/media/fat/games/PSX"
 # arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 # Path must begin with /
 
+amigapathextra=""
 arcadepathextra=""
 atari2600pathextra=""
 atari5200pathextra=""
@@ -210,6 +212,7 @@ tgfx16cdpathextra=""
 psxpathextra=""
 
 #-------- CORE PATHS RBF --------
+amigapathrbf="_Computer"
 arcadepathrbf="_Arcade"
 atari2600pathrbf="_Console"
 atari5200pathrbf="_Console"
