Complete rewrite of TTY2OLED support

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -135,8 +135,8 @@ listenkeyboard="Yes"
 listenjoy="Yes"
 
 # SAM creates game lists for each core this can be done all at once on your first startup
-# create_all_gamelists="No" means gamelists will be created the first time a core is selected, as usual
-# create_all_gamelists="Yes" means all the gamelists will be created the first time the script is run
+# "No" means gamelists will be created the first time a core is selected, as usual
+# "Yes" means all the gamelists will be created the first time the script is run
 # Future plans include adding options in the graphical menu to allow the user to create all of the gamelists
 # in case roms are added removed, renamed, etc. Including one specifically for the Arcade cores, so you can
 # update that list when new Arcade cores are added, without needing to regenerate the entire set
@@ -272,4 +272,4 @@ samquiet="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-branch="test"
+branch="named-pipes"
