--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -253,6 +253,10 @@ ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="Yes"
 
+# BGM settings
+# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first
+bgm="No"
+
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
 
