--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -27,7 +27,7 @@ mute="No"
 
 # How do we exit SAM?
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed
-playcurrentgame="Yes" 
+playcurrentgame="No" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
