--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -23,7 +23,7 @@ menuonly="Yes"
 corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # When SAM starts, mute global Volume. Unmute when button is pushed.
-mute="No"
+mute="Core"
 
 # How do we exit SAM?
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed
