--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -22,11 +22,14 @@ menuonly="Yes"
 # Valid options: amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
 corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
-# When SAM starts, mute global Volume. Unmute when button is pushed.
+# When SAM starts, mute global or core volume. Core volume can't be muted completely.
+# A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
+# Options are Yes (for global mute), No (to always play game sounds) or Core (to mute cores individually). 
 mute="Core"
 
 # How do we exit SAM?
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed
+# playcurrentgame="Yes" - SAM will stay in the current game when exiting. It's advised to use mute="No" in this case so you don't have to turn up the volume.
 playcurrentgame="No" 
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
