--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -25,7 +25,7 @@ corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gb
 # When SAM starts, mute global or core volume. Core volume can't be muted completely.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes (for global mute), No (to always play game sounds) or Core (to mute cores individually). 
-mute="Core"
+mute="No"
 
 # How do we exit SAM?
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu when a button is pushed
