--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -272,4 +272,4 @@ samquiet="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-branch="named-pipes"
+branch="rename"
