--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -37,6 +37,11 @@ playcurrentgame="No"
 # While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
 roulettetimer="500"
 
+# -------- TTY2OLED SETTINGS -------
+# Options for https://github.com/venice1200/MiSTer_tty2oled - a Hardware Add-On display for MiSTer
+# "Yes" shows the text name of the game being played - NOT the standard core name graphic
+ttyenable="Yes"
+
 #-------- EXCLUDE LISTS --------
 # One game per line
 # Trailing quote is required!
@@ -246,14 +251,16 @@ psxpathrbf="_Console"
 neogeoregion="English"
 useneogeotitles="Yes"
 
-# -------- TTY2OLED -------
-# Options for https://github.com/venice1200/MiSTer_tty2oled
-# "Yes" shows the text name of the game being played - NOT the standard core name graphic
+# -------- TTY2OLED ADVCANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
-ttyenable="Yes"
+
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
-ttyuseack="No"
+ttyuseack="Yes"
+
+# BGM settings
+# SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
+bgm=Yes
 
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
