--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -25,7 +25,7 @@ corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gb
 # Yes - When SAM starts, mute global Volume. Unmute when button is pushed.
 # Core - Mute the core only (allows scripts like BGM to play over the attract mode)
 # No - Don't mute anything
-mute=Core
+mute="Core"
 
 # What should happen when button is pushed?
 # "Yes" - SAM will relaunch the current game with sound
@@ -251,16 +251,16 @@ psxpathrbf="_Console"
 neogeoregion="English"
 useneogeotitles="Yes"
 
-# -------- TTY2OLED ADVCANCED SETTINGS -------
+# -------- TTY2OLED ADVANCED SETTINGS -------
 # All needed values are read from the tty2oled INI files
 
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="No"
 
-# BGM settings
+# -------- BGM SETTINGS -------
 # SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
-bgm=Yes
+bgm="Yes"
 
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
@@ -279,4 +279,4 @@ samquiet="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-branch="rename"
+branch="named-pipes"
