Updates for samdebug option

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -276,6 +276,9 @@ samtrace="No"
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 samquiet="Yes"
 
+# Show even more debugging information
+samdebug="No"
+
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
 branch="named-pipes"
