Update splash screen for tty2oled
Add ini option for text scroll speed

Some cleanup

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -256,6 +256,8 @@ useneogeotitles="Yes"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="No"
+# options are "Normal" "Slow" or "Fast"
+ttyscroll_speed="Normal"
 
 # -------- BGM SETTINGS -------
 # SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
