Fix speed settings

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -256,7 +256,7 @@ useneogeotitles="Yes"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="No"
-# options are "Normal" "Slow" or "Fast"
+# options are "Normal" or "Slow"
 ttyscroll_speed="Normal"
 
 # -------- BGM SETTINGS -------
