Fix scroll speed setting

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -256,8 +256,8 @@ useneogeotitles="Yes"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 ttyuseack="No"
-# options are "Normal" or "Slow"
-ttyscroll_speed="Normal"
+# multiplier 0 is no scroll, 1 is normal speed (1 second) 2 and above will make it scroll at that speed (2 is 2 seconds, etc.)
+ttyscroll_speed=1
 
 # -------- BGM SETTINGS -------
 # SAM support BGM ( https://github.com/wizzomafizzo/MiSTer_BGM ) but you have to set it up in the SAM menu first (Select "Background Music Player")
