Fix singlecore mode
When you use Super_Attract_Mode.sh start SAM will start all necessary tasks and start looping, right away

When you use Super_Attract_Mode.sh nes SAM will start in singlecore mode and play games only from that specific core.

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -11,6 +11,7 @@
 # SAM comes on at 60s + samtimeout, so default is a 2 mins wait in main menu before SAM starts.
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
 samtimeout=60
+bootsleep=60
 
 # Time before going to the next core in seconds
 gametimer=180
@@ -30,7 +31,7 @@ mute="Core"
 # What should happen when button is pushed?
 # "Yes" - SAM will relaunch the current game with sound
 # "No" - SAM will reboot to MiSTer Menu
-playcurrentgame="No" 
+playcurrentgame="No"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
