Update gamelist "creation" for Amiga

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -165,7 +165,10 @@ regen_duration=4
 # we assume you might want to update these more frequently
 rebuild_freq_arcade="Week"
 regen_duration_arcade=1
-
+# These optios are exactly the same as above, but, since new Amiga packs aren't added all the time,
+# we assume you might want to update these less frequently
+rebuild_freq_amiga="Week"
+regen_duration_amiga=8
 
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
