Changes to pipes and a few other things, in prep for the big push
certain changes in this commit may break things, but, the following commit will "fix" those things

SuperAttract_init:
Few more tweaks to stop

SuperAttract_joy.py:
SuperAttract_keyboard.py:
SuperAttract_mouse.py:
Make the location of the named pipe a commandline argument

SuperAttract_MCP:
Rename Almost all of the named pipes and their variables to better fit the scheme
Replace incorrect usage of MCP_Activity_Change_pipe with an echo, this will be properly used, at a later date

Super_Attract_mode.ini:
Fix small ommission

Super_Attract_Mode.sh:
Mostly changes for the new naming of the Activity pipe, some typo fixes, and a few misc changes

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -20,7 +20,7 @@ gametimer=180
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+# Valid options: amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
 corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # Yes - When SAM starts, mute global Volume. Unmute when button is pushed.
