Some fixes for samindex

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -176,6 +176,10 @@ regen_duration_amiga=8
 # This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
 usedefaultpaths="No"
 
+# New experimental way of building the gamelists
+# Yes to use the new way or No to use the old way
+samindex="No"
+
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
 atari2600path="/media/fat/Games/Atari7800"
