--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -21,7 +21,7 @@ menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode?
 # Valid options: amiga arcade atari2600 atari5200 atari7800 atarilynx c64 fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
-corelist_allow="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+corelist="amiga,arcade,atari2600,atari5200,atari7800,atarilynx,c64,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 # Yes - When SAM starts, mute global Volume. Unmute when button is pushed.
 # Core - Mute the core only (allows scripts like BGM to play over the attract mode)
