--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -178,7 +178,7 @@ usedefaultpaths="No"
 
 # New experimental way of building the gamelists
 # Yes to use the new way or No to use the old way
-samindex="No"
+samindex="Yes"
 
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
