Start migration of more functions to MCP
Move defaultpath handling
Move Amigashared folder handling

--- a/Super_Attract_Mode.ini
+++ b/Super_Attract_Mode.ini
@@ -147,7 +147,7 @@ listenjoy="Yes"
 # in case roms are added removed, renamed, etc. Including one specifically for the Arcade cores, so you can
 # update that list when new Arcade cores are added, without needing to regenerate the entire set
 
-create_all_gamelists="No"
+create_all_gamelists="Yes"
 
 # This option control when game lists will be regenerated automatically on startup
 # Valid values are "Hour Day Week Always Never"
@@ -174,7 +174,7 @@ regen_duration_amiga=8
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
 # This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
-usedefaultpaths="No"
+usedefaultpaths="Yes"
 
 # New experimental way of building the gamelists
 # Yes to use the new way or No to use the old way
